# jaseci

./: .gitignore  .jacignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CONTRIBUTING.md  README.md  conftest.py  jac.toml  mypy.ini  pyproject.toml  pytest.ini
jac/: .gitignore  _jac_finder.py  jac.toml  jaclang.pth  pyproject.toml  setup.py
jac-byllm/: README.md  jac.toml  pyproject.toml
jac-byllm/byllm/: config_loader.jac  exceptions.jac  lib.jac  llm.jac  local_runtime.jac  mcp.jac  mtir.jac  parallel.jac  plugin.jac  plugin_config.jac  schema.jac  telemetry.jac  types.jac
jac-byllm/byllm/impl/: config_loader.impl.jac  mcp.impl.jac  mtir.impl.jac  schema.impl.jac
jac-byllm/byllm/llm.impl/: basellm.impl.jac  mockllm.impl.jac  model.impl.jac  modelpool.impl.jac
jac-byllm/byllm/telemetry.impl/: telemetry.impl.jac
jac-byllm/byllm/types.impl/: media.impl.jac  message.impl.jac  tool.impl.jac  toolcall.impl.jac
jac-byllm/examples/: test_model_pool.jac
jac-byllm/examples/core_examples/: level_genarator.jac  personality_finder.jac
jac-byllm/examples/microbenchmarks/: essay_review.jac  expert_answer.jac
jac-byllm/examples/prompt_caching/: jac.toml
jac-byllm/examples/tool_calling/: debate_agent.jac  fantasy_trading_game.jac  marketing_agency.jac  mcp_jac_assistant.jac  mcp_remote_http.jac  mcp_remote_streamable_http.jac
jac-byllm/examples/vision/: jac.toml  math_solver.jac  mugen.jac  personality_finder.jac  receipt_analyzer.jac
jac-byllm/tests/: test_ai_agent.jac  test_byllm.jac  test_byllm.py  test_mtir_integration.jac  test_mtir_integration.py  test_multimodal_tool_results.jac  test_parallel.jac  test_telemetry_.jac  validate_schema.jac
jac-byllm/tests/fixtures/: api_key_verbose.jac  builtin_llm.jac  demo_real_streaming.jac  logging_stream_no_tools.jac  logging_stream_react.jac  math_poem_agents.jac  model_fallbacks_convenience.jac  model_pool_all_fail.jac  model_pool_basic.jac  model_pool_fallback.jac  model_pool_round_robin.jac  model_pool_router_init.jac  model_pool_streaming_fallback.jac  on_iteration_callback.jac  plain_text_recovery.jac  react_max_iterations.jac  react_max_iterations_finish_tool.jac  streaming_cross_context.jac  streaming_structured_no_handler.jac  streaming_visit_by.jac  streaming_with_react.jac  vehicle_finder.jac  with_llm_deprecated_method.jac  with_llm_image.jac  with_llm_lower.jac  with_llm_method.jac
jac-client/: README.md  jac.toml  pyproject.toml
jac-client/jac_client/docs/: README.md  advanced-state.md  exporting-functions-and-variables.md  imports.md  lifecycle-hooks.md  routing.md  working-with-ts.md
jac-client/jac_client/plugin/: cli.jac  client.jac  client_runtime.cl.jac  plugin_config.jac  pwa_runtime.cl.jac
jac-client/jac_client/templates/: fullstack.jacpack
jac-client/jac_client/tests/: conftest.py  test_cli.jac  test_cli.py  test_config_dep_injection.jac  test_desktop_api_url.jac  test_desktop_api_url.py  test_desktop_build.jac  test_desktop_bundle_extra_data.jac  test_desktop_icon_ico.jac  test_desktop_pyinstaller_clean.jac  test_desktop_pyinstaller_windows.jac  test_desktop_setup_no_sudo.jac  test_desktop_windows_data_path.jac  test_e2e.jac  test_e2e.py  test_form.jac  test_helpers.jac  test_it.jac  test_it.py  test_it_desktop.jac  test_pwa.jac  test_sidecar_bundling.jac  test_sidecar_multimode.jac  test_sidecar_stdout.jac
jac-mcp/: jac.toml  pyproject.toml
jac-mcp/examples/mcp-dashboard-studio/: README.md  jac.toml  main.jac  pyproject.toml
jac-mcp/jac_mcp/: __init__.py  compiler_bridge.jac  mode.jac  plugin.jac  plugin_config.jac  prompts.jac  resources.jac  server.jac  tools.jac
jac-mcp/jac_mcp/content/: patterns.md  pitfalls.md  understand.md
jac-mcp/jac_mcp/impl/: compiler_bridge.impl.jac  mode.impl.jac  prompts.impl.jac  resources.impl.jac  server.impl.jac  tools.impl.jac
jac-mcp/scripts/: bundle_docs.jac
jac-mcp/tests/: qa_server.jac  test_mcp.jac
jac-mcp/tests/fixtures/: invalid_snippet.jac  type_error_snippet.jac  valid_snippet.jac
jac-plugins/jac-shadcn/: pyproject.toml
jac-plugins/jac-shadcn/jac_shadcn/: plugin.jac
jac-plugins/jac-shadcn/tests/: test_shadcn.jac
jac-scale/: BRANCH_REVIEW.md  CLEANUP_PLAN.md  CLEANUP_PROGRESS.md  FOLLOWUPS.md  PR_PLAN.md  README.md  jac.toml  pyproject.toml
jac-scale/docker/sandbox-base/: Dockerfile
jac-scale/docker/sandbox-proxy/: Dockerfile  proxy.py
jac-scale/docs/: microservice-mode-architecture.md
jac-scale/docs/learn-and-do/: README.md  day-01-what-are-microservices.md  day-02-service-registry.md  day-03-process-management.md  day-04-reverse-proxy.md  day-05-gateway-static-serving.md  day-06-jwt-auth.md  day-07-inter-service-communication.md  day-08-cli-tooling.md  day-09-plugin-integration.md  day-10-deployment-interface.md  day-10.1-endpoint-passthrough.md  day-10.2-distributed-tracing.md  day-10.3-gateway-metrics.md  day-10.4-error-handling.md  day-10.5-admin-and-docs.md  day-10.6-dev-experience.md  day-10.7-technical-debt.md  day-11-testing-strategy.md  day-11.1-kubernetes-deployment.md  day-12-error-handling-resilience.md  day-13-observability.md  (+7 more)
jac-scale/jac_scale/: audit.jac  auth_models.jac  auth_tokens.jac  config_loader.jac  context.jac  coord.jac  db.jac  emailers.jac  enums.jac  google_sso_provider.jac  identity_storage.jac  job_queue.jac  lib.jac  memory_hierarchy.jac  mongo_storage.jac  plugin.jac  plugin.py  plugin_config.jac  scheduler.jac  serve.jac  streams.jac  user_manager.jac  utils.jac  webhook.jac  websocket.jac
jac-scale/scripts/: Dockerfile.microservice.exp  build_admin_ui.jac  k8s_microservice_real_e2e.sh
jac-scale/test-microservices/: jac.toml
jac-super/: README.md  jac.toml  pyproject.toml
jac-super/tests/: test_console_capability.jac  test_console_conformance.jac  test_console_renderer.jac  test_shadcn.jac  test_theme.jac
jac/jaclang/: __init__.py  __main__.py  jac.spec  jac0.py  lib.jac  meta_importer.py  pytest_plugin.py
jac/scripts/: precompile_bytecode.jac
jac/tests/: conftest.py  fixtures_list.jac  fixtures_list.py
jaseci-package/: jac.toml  pyproject.toml
(+2264 files in other folders)
