[project]
name = "byllm"
version = "0.4.20"
description = "byLLM Provides Easy to use APIs for different LLM Providers to be used with Jaseci's Jaclang Programming Language."
authors = [{name = "Jason Mars", email = "jason@mars.ninja"}]
maintainers = [{name = "Jason Mars", email = "jason@mars.ninja"}]
license = "MIT"
readme = "README.md"
keywords = ["llm", "jaclang", "jaseci", "byLLM"]
requires-python = ">=3.11"
dependencies = [
    "jaclang>=0.10.2",
    "litellm>=1.75.5.post1,<1.80.0",
    "loguru>=0.7.2,<0.8.0",
    "pillow>=10.4.0,<10.5.0",
]

[project.entry-points."jac"]
byllm = "byllm.plugin:JacRuntime"
byllm_plugin_config = "byllm.plugin_config:JacByllmPluginConfig"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
]
tools = ["wikipedia"]
video = ["opencv-python-headless"]

[tool.setuptools.packages.find]
include = ["byllm*"]

[tool.setuptools.package-data]
"*" = ["*.jac", "*.impl/*.jac", "*.cl/*.jac"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
