[project]
name = "jac-client"
version = "0.2.14"
description = "Build full-stack web applications with Jac - one language for frontend and backend."
authors = [{name = "Jason Mars", email = "jason@mars.ninja"}]
maintainers = [{name = "Jason Mars", email = "jason@mars.ninja"}]
license = "MIT"
readme = "README.md"
keywords = [
    "jac",
    "jaclang",
    "jaseci",
    "frontend",
    "full-stack",
    "web-development",
]
requires-python = ">=3.12"
dependencies = [
    "jaclang>=0.9.14",
]

[project.urls]
Repository = "https://github.com/Jaseci-Labs/jaseci"
Homepage = "https://jaseci.org"
Documentation = "https://jac-lang.org"

[project.entry-points."jac"]
serve = "jac_client.plugin.client:JacClient"
cli = "jac_client.plugin.cli:JacCmd"
plugin_config = "jac_client.plugin.plugin_config:JacClientPluginConfig"


[project.optional-dependencies]
dev = [
    "python-dotenv==1.0.1",
    "pytest==8.3.5",
]

[tool.setuptools.packages.find]
include = ["jac_client*"]

[tool.setuptools.package-data]
"*" = ["*.jac", "*.impl/*.jac", "*.cl/*.jac"]
"jac_client" = ["templates/*.jacpack"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
