[project]
name = "jac-client"
version = "0.3.19"
description = "Build full-stack web applications with Jac - one language for frontend and backend."
authors = [{name = "Jason Mars", email = "jason@mars.ninja"}]
maintainers = [{name = "Jason Mars", email = "jason@mars.ninja"}]
license = "MIT"
readme = "README.md"
keywords = [
    "jac",
    "jaclang",
    "jaseci",
    "frontend",
    "full-stack",
    "web-development",
]
requires-python = ">=3.12"
dependencies = [
    "jaclang>=0.15.5",
]

[project.urls]
Repository = "https://github.com/jaseci-labs/jaseci"
Homepage = "https://jaseci.org"
Documentation = "https://jac-lang.org"
Source = "https://github.com/jaseci-labs/jaseci/tree/main/jac-client"
Issues = "https://github.com/jaseci-labs/jaseci/issues"
Changelog = "https://github.com/jaseci-labs/jaseci/blob/main/docs/docs/community/release_notes/jac-client.md"

[project.entry-points."jac"]
serve = "jac_client.plugin.client:JacClient"
cli = "jac_client.plugin.cli:JacCmd"
plugin_config = "jac_client.plugin.plugin_config:JacClientPluginConfig"


[project.optional-dependencies]
dev = [
    "python-dotenv==1.0.1",
    "pytest==8.3.5",
    "watchdog>=3.0.0",
]

[tool.setuptools.packages.find]
include = ["jac_client*"]

[tool.setuptools.package-data]
"*" = ["*.jac", "*.impl/*.jac", "*.cl/*.jac"]
"jac_client" = ["templates/**/*", "templates/**/.*", "_precompiled/**/*.jir", "_precompiled/manifest.json"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
