[project]
name = "jac-scale"
version = "0.1.5"
description = ""
authors = [{ name = "Jason Mars", email = "jason@mars.ninja" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jaclang>=0.9.14",
    "python-dotenv>=1.2.1,<2.0.0",
    "docker>=7.1.0,<8.0.0",
    "kubernetes>=34.1.0,<35.0.0",
    "pymongo>=4.15.4,<5.0.0",
    "redis>=7.1.0,<8.0.0",
    "fastapi>=0.121.3,<0.122.0",
    "uvicorn>=0.38.0,<0.39.0",
    "pyjwt>=2.10.1,<2.11.0",
    "fastapi-sso>=0.18.0,<1.0.0",
    "python-multipart>=0.0.21,<1.0.0",
]

[project.entry-points."jac"]
scale = "jac_scale.plugin:JacCmd"
scale_plugin_config = "jac_scale.plugin_config:JacScalePluginConfig"

[tool.setuptools.packages.find]
include = ["jac_scale*"]

[tool.setuptools.package-data]
"*" = ["*.jac", "*.impl/*.jac", "*.cl/*.jac"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
