[project]
name = "jac-super"
version = "0.1.3"
description = "Enhanced console output for Jac CLI with Rich formatting"
authors = [{name = "Jason Mars", email = "jason@mars.ninja"}]
maintainers = [{name = "Jason Mars", email = "jason@mars.ninja"}]
license = "MIT"
readme = "README.md"
keywords = [
    "jac",
    "jaclang",
    "jaseci",
    "console",
    "rich",
    "cli",
]
requires-python = ">=3.12"
dependencies = [
    "jaclang>=0.10.2",
    "rich>=13.0.0",
]

[project.urls]
Repository = "https://github.com/Jaseci-Labs/jaseci"
Homepage = "https://jaseci.org"
Documentation = "https://jac-lang.org"

[project.entry-points."jac"]
console = "jac_super.plugin.console:JacSuperPlugin"

[tool.setuptools.packages.find]
include = ["jac_super*"]

[tool.setuptools.package-data]
"*" = ["*.jac", "*.impl/*.jac"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
