[project]
name = "jaclang"
version = "0.10.3"
description = "Jac programming language - a superset of both Python and TypeScript/JavaScript with novel constructs for AI-integrated programming."
authors = [{ name = "Jason Mars", email = "jason@mars.ninja" }]
maintainers = [{ name = "Jason Mars", email = "jason@mars.ninja" }]
license = "MIT"
readme = "README.md"
keywords = [
    "jac",
    "jaclang",
    "jaseci",
    "python",
    "programming-language",
    "machine-learning",
    "artificial-intelligence",
]
requires-python = ">=3.12"
dependencies = ["llvmlite>=0.43.0"]
# Note: lark, interegular, pluggy, pygls are vendored

[project.urls]
Repository = "https://github.com/Jaseci-Labs/jaseci"
Homepage = "https://jaseci.org"
Documentation = "https://docs.jaseci.org"

[project.scripts]
jac = "jaclang.jac0core.cli_boot:start_cli"

[project.entry-points.pytest11]
jaclang = "jaclang.pytest_plugin"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.1",
    "pytest-xdist>=3.6.1",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.1",
    "watchdog>=3.0.0",
]

[tool.setuptools.packages.find]
include = ["jaclang*"]

[tool.setuptools.package-data]
"*" = ["*.jac", "*.impl/*.jac", "*.cl/*.jac", "*.lark", "*.pyi", "py.typed"]
jaclang = ["sitecustomize.py", "_precompiled/**/*.jbc", "_precompiled/manifest.json"]

[tool.setuptools]
include-package-data = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
