[project]
name = "jaseci"
version = "2.3.4"
description = "Jaseci - A complete AI-native programming ecosystem with Jac language, LLM integration, and full-stack web apps"
authors = [{name = "Jason Mars", email = "jason@mars.ninja"}]
maintainers = [{name = "Jason Mars", email = "jason@mars.ninja"}]
license = "MIT"
readme = "README.md"
keywords = [
    "jac",
    "jaclang",
    "jaseci",
    "ai",
    "llm",
    "full-stack",
    "web-apps",
    "jac-client",
    "jac-scale",
    "programming-language",
    "machine-learning",
    "artificial-intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "jaclang>=0.12.0",
    "byllm>=0.5.4",
    "jac-client>=0.3.4",
    "jac-scale>=0.2.4",
    "jac-super>=0.1.6",
    "jac-mcp>=0.1.3",
]

[project.urls]
Repository = "https://github.com/Jaseci-Labs/jaseci"
Homepage = "https://jaseci.org"
Documentation = "https://jac-lang.org"

[tool.setuptools.packages.find]
include = ["jaseci*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
