[project]
name = "jaseci"
version = "2.3.20"
description = "Jaseci - A complete AI-native programming ecosystem with Jac language, LLM integration, and full-stack web apps"
authors = [{name = "Jason Mars", email = "jason@mars.ninja"}]
maintainers = [{name = "Jason Mars", email = "jason@mars.ninja"}]
license = "MIT"
readme = "README.md"
keywords = [
    "jac",
    "jaclang",
    "jaseci",
    "ai",
    "llm",
    "full-stack",
    "web-apps",
    "jac-client",
    "jac-scale",
    "programming-language",
    "machine-learning",
    "artificial-intelligence",
]
requires-python = ">=3.12"
dependencies = [
    "jaclang>=0.15.5",
    "byllm>=0.6.11",
    "jac-client>=0.3.19",
    "jac-scale>=0.2.21",
    "jac-super>=0.1.17",
    "jac-mcp>=0.1.18",
]

[project.urls]
Repository = "https://github.com/jaseci-labs/jaseci"
Homepage = "https://jaseci.org"
Documentation = "https://jac-lang.org"
Source = "https://github.com/jaseci-labs/jaseci/tree/main/jaseci-package"
Issues = "https://github.com/jaseci-labs/jaseci/issues"
Changelog = "https://github.com/jaseci-labs/jaseci/releases"

[tool.setuptools.packages.find]
include = ["jaseci*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
